Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant_ra\n",
+    "    if restaurant_rating(restaurant)\n",
     "    pass"
    ]
   },
