--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if restaurant['price']\n",
+    "    if len(restaurant['price']) > \n",
     "    pass"
    ]
   },
