Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -482,21 +482,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(restaurant['rating'])? (<ipython-input-35-b5508302f921>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-b5508302f921>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print restaurant['rating']\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(restaurant['rating'])?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    print restaurant['rating']\n",
+    "    print(restaurant['rating'])\n",
     "    return restaurant['rating'] > rating\n",
     "    pass"
    ]
